<resources>
    <string name="app_name">Vidio</string>


    <string name="pull_down_ing">下拉...        </string>
    <string name="release_refresh">释放刷新...</string>
    <string name="refreshing">正在刷新...</string>
    <!--公共的-->
    <string name="pull_up_over">已经到底啦～</string>
    <string name="btn_cancal">取消</string>
    <string name="btn_confirm">确定</string>

    <!--登录-->
    <string name="login_phone">手机账号</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_code">验证码</string>
    <string name="login_btn_next">下一步</string>
    <string name="login_phone_pwd">手机密码登录</string>

    <!--朋友-->
    <string name="friend_search">搜索</string>
    <string name="friend_edit_name">编辑名称</string>
    <string name="friend_delete">删除</string>
    
    <!--我的-->
    <string name="my_feedback">我的反馈</string>
    <string name="my_all_feedback">全部反馈</string>
    <string name="my_friend_feedback">友好反馈</string>
    <string name="my_target_feedback">特定目标反馈</string>


</resources>
