<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/llStatusBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_feedback"
            android:textAppearance="@style/text_16_black" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_gray"/>



    <RelativeLayout
        android:id="@+id/rlMyInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground">
        
        <ImageView
            android:id="@+id/ivHead"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <TextView
            android:id="@+id/tvName"
            style="@style/text_13_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivHead"
            android:layout_marginTop="27dp"
            android:layout_marginLeft="15dp"
            android:text="昵称"/>

        <TextView
            android:id="@+id/tvLabel"
            style="@style/text_11_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivHead"
            android:layout_below="@id/tvName"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:text="签名签名签名签名签名"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_toRightOf="@id/ivHead"
            android:layout_below="@id/tvLabel"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:background="@color/divide_gray"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_next"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlAllFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground">
        <ImageView
            android:id="@+id/ivAllFeedback"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:src="@mipmap/ic_all_feedback"/>
        <TextView
            android:id="@+id/tvAllFeedback"
            style="@style/text_13_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivAllFeedback"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="16dp"
            android:text="@string/my_all_feedback"/>
        <TextView
            android:id="@+id/tvAllFeedbackCount"
            style="@style/text_11_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivAllFeedback"
            android:layout_below="@id/tvAllFeedback"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="16dp"
            android:text="有2条新反馈"/>
        <View
            android:id="@+id/vAllFeedback"
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_toRightOf="@id/tvAllFeedback"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="-3dp"
            android:background="@drawable/vi_circle_red_bg"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_toRightOf="@id/ivAllFeedback"
            android:layout_below="@id/tvAllFeedbackCount"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:background="@color/divide_gray"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_next"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlFriendFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground">
        <ImageView
            android:id="@+id/ivFriendFeedback"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:src="@mipmap/ic_friend_feedback"/>
        <TextView
            android:id="@+id/tvFriendFeedback"
            style="@style/text_13_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivFriendFeedback"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="16dp"
            android:text="@string/my_friend_feedback"/>
        <TextView
            android:id="@+id/tvFriendFeedbackCount"
            style="@style/text_11_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivFriendFeedback"
            android:layout_below="@id/tvFriendFeedback"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="16dp"
            android:text="有2条新反馈"/>
        <View
            android:id="@+id/vFriendFeedback"
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_toRightOf="@id/tvFriendFeedback"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="-3dp"
            android:background="@drawable/vi_circle_red_bg"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_toRightOf="@id/ivFriendFeedback"
            android:layout_below="@id/tvFriendFeedbackCount"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:background="@color/divide_gray"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_next"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlTargetFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground">
        <ImageView
            android:id="@+id/ivTargetFeedback"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:src="@mipmap/ic_target_feedback"/>
        <TextView
            android:id="@+id/tvTargetFeedback"
            style="@style/text_13_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivTargetFeedback"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="16dp"
            android:text="@string/my_target_feedback"/>
        <TextView
            android:id="@+id/tvTargetFeedbackCount"
            style="@style/text_11_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivTargetFeedback"
            android:layout_below="@id/tvTargetFeedback"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="16dp"
            android:text="有2条新反馈"/>
        <View
            android:id="@+id/vTargetFeedback"
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_toRightOf="@id/tvTargetFeedback"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="-3dp"
            android:background="@drawable/vi_circle_red_bg"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_toRightOf="@id/ivTargetFeedback"
            android:layout_below="@id/tvTargetFeedbackCount"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:background="@color/divide_gray"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_next"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    </RelativeLayout>

</LinearLayout>